--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,3 +3,5 @@ deployment:
     tasks:
         - export DEPLOYPATH=/home/misrishah/market/
         - composer i
+        - php artisan key:generate
+        - php artisan up
